// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Span /> renders with default style 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: 400;
  font-size: 1.3rem;
  color: #767676;
}

<span
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Span /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: 400;
  font-size: 1.3rem;
  color: #8d8d8d;
}

<span
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <LabelSpan /> 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  z-index: 100;
}

<span
    class="c0"
  />
</DocumentFragment>
`;
